# curriculum

onlineCode/CPP/: 1_crepe_cart.cpp  CMakeLists.txt  a.out  classTest.cpp  classTest.h  header.h  main.cpp  vector_test  vector_test.cpp
onlineCode/HRCodesSecond/: CMakeLists.txt  a.out
onlineCode/HRCodesSecond/DP/: 1-0-napsack.cpp  Climb_the_stairs  Climb_the_stairs.cpp  cion_change_optimised  cion_change_optimised.cpp  coin_change  coin_change.cpp  construct-the-array.cpp  equalize_the_string  equalize_the_string.cpp  share-buy-sell-k-times.cpp  stairs_climb  stairs_climb.cpp  wget-log
onlineCode/HRCodesSecond/Graph/: AStoryOfATree.cpp  travellingIsFun.cpp
onlineCode/HRCodesSecond/Graph/dijkstra/: dijkstra  dijkstra.cpp  dijkstra_input.txt  dijkstra_input_2.txt  out_2_actual.txt
onlineCode/HRCodesSecond/UnOrganisedCodes/: AlmostSorted.cpp  ArrayJourney  ArrayJourney.cpp  Dijksta(BhagMilkhaBhag).cpp  FindtheOddQuerylocked.cpp  GoogleCodeJam2019_Q1.cpp  GoogleKS.cpp  InstiTest2_BestDevisor.cpp  MaxAvgSumOfPartition.input  Maximum average sum partition of an array .cpp  MaximumPathSum .cpp  SaveElectricity.cpp  Synchronous_shopping  Synchronous_shopping.cpp  TheGridSearch.cpp  a.out  board-cutting  chefAndHappiness.cpp  combinations of strings that can be used to dial a number.cpp  organizing-containers-of-balls.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/AccentureJapan/: arr.cpp  light  light.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/Amazon/: Count_Possible_Decodings_of_a_given_Digit_Sequence  Count_Possible_Decodings_of_a_given_Digit_Sequence.cpp  Dice Throw | DP-30  Dice Throw | DP-30.cpp  LIS  LIS.cpp  Rank of all elements in an array  Rank of all elements in an array.cpp  Replace every element with the least greater element on its right  Replace every element with the least greater element on its right.cpp  URLify a given string.cpp  bottom_view.cpp  bound_test  bound_test.cpp  test
onlineCode/HRCodesSecond/UnOrganisedCodes/COdeChef/: Chef_and_Interesting_Subsequences  Chef_and_Interesting_Subsequences.cpp  Distorted_Palindrome  Distorted_Palindrome.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/Flipkart/: maxCoins.cpp  minimum-steps-reach-target-knight.cpp  minimumArea.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/GS/: MinumumMeetingCost.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/General Algorithms/: Sieve of Eratosthenes.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/GoogleKickStart/: Spectating_Villages  Spectating_Villages.cpp  one  one.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/KMP/: KMP  KMP.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/Paytm/: Count BST subtrees that lie in given range.cpp  merging_intervals.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/SamsungCodeChef/: Beautiful_Sequences  Beautiful_Sequences.cpp  a.out  inp
onlineCode/HRCodesSecond/UnOrganisedCodes/Sprinklr/: String_games  String_games.cpp  barInput  bargraph  bargraph.cpp  interesting_prime  interesting_prime.cpp  metroConstruction.cpp
onlineCode/HRCodesSecond/UnOrganisedCodes/UBER/: no two consecutive  element sum divisible by 3  no two consecutive  element sum divisible by 3.cpp  no two consecutive  element sum divisible by 3.txt
(+84 files in other folders)
