cmake_minimum_required(VERSION 3.13)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CPP cmake-build-debug/DP/LIS.cpp)
#add_executable(CPP cmake-build-debug/graph/RoadsAndLibraries.cpp )
#add_executable(CPP cmake-build-debug/graph/JourneyToMoon.cpp "cmake-build-debug/graph/(BFS)ShortestReach.cpp")
#add_executable(CPP "cmake-build-debug/graph/(BFS)ShortestReach.cpp" cmake-build-debug/graph/unionFind.cpp)
#add_executable(CPP cmake-build-debug/graph/unionFind.cpp cmake-build-debug/DP/TheMaximumSubarray.cpp)
#add_executable(CPP cmake-build-debug/DP/TheMaximumSubarray.cpp )
#add_executable(CPP cmake-build-debug/DP/SherlockAndCost.cpp )
#add_executable(CPP  cpp cmake-build-debug/DP/StringEqualOperation.cpp)

#add_executable(CPP cmake-build-debug/DP/SubsetSum.cpp cmake-build-debug/DP/PrimeXorus.cpp)
add_executable(CPP  cmake-build-debug/DP/PrimeXorus.cpp)

#add_executable(CPP  cmake-build-debug/CMakeFiles/CPP.dir/DP/TwoSubsetEqualSum.cpp)

#add_executable(CPP cmake-build-debug/DP/HR_easy.cpp )
#add_executable(CPP cmake-build-debug/Hackerrank_DP_equal.cpp )
#add_executable(CPP cmake-build-debug/DP_partition.cpp)
#add_executable(vector header.h classTest.cpp classTest.h)
#add_executable(vector header.h vector_test.cpp)
