cmake_minimum_required(VERSION 3.13)
project(HRCodesSecond)

set(CMAKE_CXX_STANDARD 14)

#add_executable(HRCodesSecond UnOrganisedCodes/AlmostSorted.cpp DP/construct-the-array.cpp)
#add_executable(HRCodesSecond UnOrganisedCodes/organizing-containers-of-balls.cpp )
#add_executable(HRCodesSecond DP/construct-the-array.cpp )
#add_executable(HRCodesSecond DP/1-0-napsack.cpp )
#add_executable(HRCodesSecond DP/share-buy-sell-k-times.cpp )
#add_executable(HRCodesSecond UnOrganisedCodes/TheGridSearch.cpp )
#add_executable(HRCodesSecond UnOrganisedCodes/SaveElectricity.cpp )
#add_executable(HRCodesSecond UnOrganisedCodes/FindtheOddQuerylocked.cpp )
#add_executable(HRCodesSecond Graph/AStoryOfATree.cpp )
#add_executable(HRCodesSecond UnOrganisedCodes/InstiTest2_BestDevisor.cpp UnOrganisedCodes/GoogleKS.cpp)
#add_executable(HRCodesSecond UnOrganisedCodes/GoogleKS.cpp )
#add_executable(HRCodesSecond "UnOrganisedCodes/MaximumPathSum .cpp" )
#add_executable(HRCodesSecond UnOrganisedCodes/GS/MinumumMeetingCost.cpp)
#add_executable(HRCodesSecond UnOrganisedCodes/Paytm/merging_intervals.cpp "UnOrganisedCodes/Paytm/Count BST subtrees that lie in given range.cpp")
#add_executable(HRCodesSecond  UnOrganisedCodes/kickstart/cherry_mesh.cpp )
#add_executable(HRCodesSecond "UnOrganisedCodes/Paytm/Count BST subtrees that lie in given range.cpp" )
#add_executable(HRCodesSecond  "UnOrganisedCodes/kickstart/Code-Eat Switcher.cpp" UnOrganisedCodes/kickstart/StreetChecker.cpp)
#add_executable(HRCodesSecond "UnOrganisedCodes/combinations of strings that can be used to dial a number.cpp" )
#add_executable(HRCodesSecond  UnOrganisedCodes/kickstart/StreetChecker.cpp )

#add_executable(HRCodesSecond UnOrganisedCodes/Flipkart/maxCoins.cpp )
add_executable(HRCodesSecond  Graph/travellingIsFun.cpp)
